--- a/src/index.html
+++ b/src/index.html
@@ -261,16 +261,27 @@
       </section>
     </main>
     <footer class="section section_dark footer">
-      <img src="./assets/logo.svg" alt="logo" class="logo" height="30" />
-      <div>
-        <p class="text text_white footer__text">MARTHWAITE, SEDBERGH</p>
-        <p class="text text_white footer__text">OPEN TIMES</p>
-        <p class="text text_white footer__text">CUMBRIA</p>
-        <p class="text text_white footer__text">
+      <img
+        src="./assets/logo.svg"
+        alt="logo"
+        class="logo footer__logo"
+        height="30"
+      />
+      <div class="footer__grid">
+        <p class="text text_white text_heading_footer footer__text">
+          MARTHWAITE, SEDBERGH
+        </p>
+        <p class="text text_white text_heading_footer footer__text">
+          OPEN TIMES
+        </p>
+        <p class="text text_white text_heading_footer footer__text">CUMBRIA</p>
+        <p class="text text_white text_heading_footer footer__text">
           MON - FRI: 09:00 AM - 10:00 PM
         </p>
-        <p class="text text_white footer__text">+00 44 123 4567</p>
-        <p class="text text_white footer__text">
+        <p class="text text_white text_heading_footer footer__text">
+          +00 44 123 4567
+        </p>
+        <p class="text text_white text_heading_footer footer__text">
           SAT - SUN: 0900 AM - 11:30 PM
         </p>
       </div>
